# clawshell

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clawshell.example.toml  tarpaulin.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
npm/: publish.sh
npm/clawshell/: package.json
npm/clawshell-darwin-arm64/: package.json
npm/clawshell-linux-arm64/: package.json
npm/clawshell-linux-x64/: package.json
src/: app.rs  cli.rs  config.rs  dlp.rs  email.rs  hermes_cli.rs  keys.rs  lib.rs  main.rs  onboard.rs  openclaw_cli.rs  process.rs  proxy.rs  stats.rs  translate.rs  tui.rs
src/app/: tests.rs
src/migration/: core.rs  mod.rs  orchestrator.rs  target.rs
src/migration/targets/: mod.rs
src/migration/targets/clawshell_toml/: mod.rs
src/migration/targets/clawshell_toml/versions/: mod.rs  to_v0_2_1.rs  v0_0_1_to_v0_0_2.rs
src/oauth/: codex.rs  mod.rs  storage.rs
src/onboard/: autostart.rs  backup.rs  config_render.rs  credentials.rs  hermes_config.rs  interactive.rs  managed_skills.rs  mod.rs  openclaw_json.rs  skills.rs  test_support.rs  types.rs
src/platform/: linux.rs  macos.rs  mod.rs
tests/: cli_tests.rs  config_fixtures.rs  integration.rs
tests/fixtures/config/invalid/: bad_toml_syntax.toml  dlp_invalid_action.toml  dlp_invalid_regex.toml  dlp_pattern_missing_name.toml  dlp_pattern_missing_regex.toml  host_is_number.toml  key_missing_real_key.toml  key_missing_virtual_key.toml  missing_server.toml  port_negative.toml  port_string.toml  port_too_large.toml  scan_responses_string.toml  unclosed_string.toml  unknown_provider.toml
tests/fixtures/config/valid/: all_fields.toml  dlp_disabled_scan.toml  empty_base_url.toml  empty_host.toml  empty_keys.toml  extra_fields.toml  minimal.toml  port_max.toml  port_zero.toml
tests/snapshots/: config_fixtures__all_fields.snap  config_fixtures__all_fields.snap.new  config_fixtures__bad_toml_syntax.snap  config_fixtures__dlp_disabled_scan.snap  config_fixtures__dlp_invalid_action.snap  config_fixtures__dlp_invalid_regex.snap  config_fixtures__dlp_pattern_missing_name.snap  config_fixtures__dlp_pattern_missing_regex.snap  config_fixtures__empty.snap  config_fixtures__empty_base_url.snap  config_fixtures__empty_host.snap  config_fixtures__empty_keys.snap  config_fixtures__extra_fields.snap  config_fixtures__host_is_number.snap  config_fixtures__key_missing_real_key.snap  config_fixtures__key_missing_virtual_key.snap  config_fixtures__minimal.snap  config_fixtures__missing_server.snap  config_fixtures__missing_stats.snap  config_fixtures__missing_upstream.snap  config_fixtures__port_max.snap  config_fixtures__port_negative.snap  config_fixtures__port_string.snap  config_fixtures__port_too_large.snap  config_fixtures__port_zero.snap  config_fixtures__scan_responses_string.snap  config_fixtures__unclosed_string.snap  config_fixtures__unknown_provider.snap  config_fixtures__unknown_provider.snap.new
