[package]
name = "clawshell"
version = "0.0.2"
edition = "2024"
license-file = "LICENSE"
homepage = "https://github.com/clawshell/clawshell"
repository = "https://github.com/clawshell/clawshell"
exclude = ["npm/*", "docs/*"]
description = "A security privileged process for the OpenClaw ecosystem."

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.1"
regex = "1.12.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tower-http = { version = "0.6.8", features = ["trace"] }
http = "1.4"
http-body-util = "0.1.3"
bytes = "1.11.1"
futures-util = "0.3.31"
clap = { version = "4.5.58", features = ["derive"] }
nix = { version = "0.31.1", features = ["signal", "process", "feature", "user"] }
inquire = "0.9.3"
console = "0.16.2"
vfs = "0.12"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6"
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "clawshell"
path = "src/main.rs"

[lints.clippy]
collapsible_if = "allow"
