[package]
name = "clawshell"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
homepage = "https://github.com/clawshell/clawshell"
repository = "https://github.com/clawshell/clawshell"
exclude = ["npm/*", "docs/*"]
description = "A security privileged process for the OpenClaw ecosystem."

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "rustls", "form", "blocking", "json"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"
regex = "1.12.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tower-http = { version = "0.6.8", features = ["trace"] }
http = "1.4"
http-body-util = "0.1.3"
bytes = "1.11.1"
futures-util = "0.3.31"
clap = { version = "4.6.0", features = ["derive"] }
nix = { version = "0.31.2", features = ["signal", "process", "feature", "user"] }
inquire = "0.9.4"
console = "0.16.3"
vfs = "0.12"
thiserror = "2"
semver = "1"
rustls-native-certs = "0.8.3"
sha2 = "0.10.9"
uuid = { version = "1.22.0", features = ["v4"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
base64 = "0.22.1"
urlencoding = "2.1.3"
rand = "0.10.0"
open = "5.3.3"
tokio-util = { version = "0.7.18", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["full", "test-util"] }
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6"
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "clawshell"
path = "src/main.rs"

[lints.clippy]
collapsible_if = "allow"
